--- a/Final_Project/templates/index.html
+++ b/Final_Project/templates/index.html
@@ -1,43 +1,115 @@
 <!DOCTYPE html>
 <html lang="en">
-    <title>Upload new File</title>
-    <h1>Upload new File</h1>
-    
-   {% extends "base.html" %} {% block content %}
 
-<h2>Does your skin lesion necessitate a dermatologist visit?</h2>
-<h4>Click to find out!</h4>
+<head>
+    <!-- Mobile Specific Meta -->
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Favicon-->
+    <link rel="shortcut icon" href="img/fav.png">
+    <!-- Author Meta -->
+    <meta name="author" content="Colorlib">
+    <!-- Meta Description -->
+    <meta name="description" content="">
+    <!-- Meta Keyword -->
+    <meta name="keywords" content="">
+    <!-- meta character set -->
+    <meta charset="UTF-8">
+    <!-- Site Title -->
+    <title>Medical</title>
 
-<div>
-  <!-- connected to /predict route that  -->
-  <form id="upload-file" method="post" enctype="multipart/form-data">
-    <label for="imageUpload" class="upload-label">
+    <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
+    <!--
+			CSS
+			============================================= -->
+    <link rel="stylesheet" href="../static/css/linearicons.css">=
+    <link rel="stylesheet" href="../static/css/font-awesome.min.css">
+    <link rel="stylesheet" href="../static/css/magnific-popup.css">
+    <link rel="stylesheet" href="..static/css/nice-select.css">
+    <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" href="../static/css/bootstrap.css">
+    <link rel="stylesheet" href="../static/css/main.css">
+</head>
+
+<body>
+    <!-- Start Header Area -->
+    <header class="default-header">
+        <div class="container">
+            <div class="header-wrap">
+                <div class="header-top d-flex justify-content-between align-items-center">
+                    <div class="logo">
+                        <a href="#home"><img src="../static/img/logo.png" alt=""></a>
+                    </div>
+                    <div class="main-menubar d-flex align-items-center">
+                        <nav class="hide">
+                            <a href="#home">Home</a>
+                            <a href="#service">Services</a>
+                            <a href="#appoinment">Appoinment</a>
+                            <a href="#consultant">Consultants</a>
+                        </nav>
+                        <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+    <!-- End Header Area -->
+
+    <!-- start banner Area -->
+    <section class="banner-area relative" id="home">
+        <div class="container">
+            <div class="row fullscreen align-items-center justify-content-center">
+                <div class="banner-content col-lg-6 col-md-12">
+                    <h1 class="text-uppercase">
+                        We are the team <br> of excellence
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                    </p>
+                    <button class="primary-btn2 mt-20 text-uppercase ">Get Started<span class="lnr lnr-arrow-right"></span></button>
+                </div>
+                <div class="col-lg-6 d-flex align-self-end img-right">
+                    <img class="img-fluid" src="../static/img/header-img.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- End banner Area -->
+
+    <h3>Step 1: Upload a New Picture</h1>
+
+        {% extends "base.html" %} {% block content %}
+
+        <h4>Choose a picture to be be evaluated</h4>
+
+        <div>
+            <!-- connected to /predict route that  -->
+            <form id="upload-file" method="post" enctype="multipart/form-data">
+                <label for="imageUpload" class="upload-label">
       Choose...
     </label>
-    <input
-      type="file"
-      name="file"
-      id="imageUpload"
-      accept=".png, .jpg, .jpeg"
-    />
-  </form>
+                <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg" />
+            </form>
 
-  <div class="image-section" style="display:none;">
-    <div class="img-preview">
-      <div id="imagePreview"></div>
-    </div>
-    <div>
-      <button type="button" class="btn btn-primary btn-lg " id="btn-predict">
+            <div class="image-section" style="display:none;">
+                <div class="img-preview">
+                    <div id="imagePreview"></div>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-primary btn-lg " id="btn-predict">
         Predict!
       </button>
-    </div>
-  </div>
+                </div>
+            </div>
 
-  <div class="loader" style="display:none;"></div>
+            <div class="loader" style="display:none;"></div>
 
-  <h3 id="result">
-    <span> </span>
-  </h3>
-</div>
+            <h3 id="result">
+                <span> </span>
+            </h3>
+        </div>
 
-{% endblock %}
+        {% endblock %}
+
+</body>
+
+</html>
