--- a/Final_Project/templates/index.html
+++ b/Final_Project/templates/index.html
@@ -65,7 +65,7 @@
                     <p>
                         Skin cancer is the most common types of cancer, but it's also one of the easiest kinds to treate if you catch it early.
                     </p>
-                    <button class="primary-btn2 mt-20 text-uppercase " id="btn-predict">Get Started<span class="lnr lnr-arrow-right"></span></button>
+                    <!-- <button class="primary-btn2 mt-20 text-uppercase " id="btn-predict">Get Started<span class="lnr lnr-arrow-right"></span></button> -->
                 </div>
                 <div class="col-lg-6 d-flex align-self-end img-right">
                     <img class="img-fluid" src="../static/img/header-img.png" alt="">
@@ -94,11 +94,9 @@
         <div class="img-preview">
             <div id="imagePreview"></div>
         </div>
-        <!-- <div>
-            <button type="button" class="btn btn-primary btn-lg " id="btn-predict">
-            Predict!
-          </button>
-        </div> -->
+        <div>
+            <button class="primary-btn2 mt-20 text-uppercase " id="btn-predict">Get Started<span class="lnr lnr-arrow-right"></span></button>
+        </div>
     </div>
 
     <div class="loader" style="display:none;"></div>
