--- a/Final_Project/templates/base.html
+++ b/Final_Project/templates/base.html
@@ -16,12 +16,12 @@
 
 <body>
 
-    <nav class="navbar navbar-dark bg-dark">
-        <div class="container">
-            <a class="navbar-brand" href="#">The Lesion Legion</a>
-            <!-- <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Help</button> -->
-        </div>
-    </nav>
+    <!-- <nav class="navbar navbar-dark bg-dark">
+        <div class="container"> -->
+    <!-- <a class="navbar-brand" href="#">The Lesion Legion</a> -->
+    <!-- <button class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Help</button> -->
+    <!-- </div>
+    </nav> -->
     <div class="container">
         <div id="content" style="margin-top:2em">{% block content %}{% endblock %}</div>
     </div>
