--- a/Final_Project/templates/index.html
+++ b/Final_Project/templates/index.html
@@ -15,7 +15,7 @@
     <!-- meta character set -->
     <meta charset="UTF-8">
     <!-- Site Title -->
-    <title>Medical</title>
+    <title>SkinScan</title>
 
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
     <!--
@@ -63,10 +63,31 @@
                         Skin Scan <br> self exam
                     </h1>
                     <p>
-                        Skin cancer is the most common types of cancer, but it's also one of the easiest kinds to treate if you catch it early.
+                        Skin cancer is the most common type of cancer, but it's also one of the easiest kinds to treate if you catch it early.
                     </p>
-                    <!-- <button class="primary-btn2 mt-20 text-uppercase " id="btn-predict">Get Started<span class="lnr lnr-arrow-right"></span></button> -->
+                    <!-- Click to upload image -->
+                    <form id="upload-file" method="post" enctype="multipart/form-data">
+                        <label for="imageUpload" class="upload-label">Upload Image</label>
+                        <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg" />
+                    </form>
+
+                    <!-- button to analyze image -->
+
+                    <div class="image-section" style="display:none;">
+                        <div class="img-preview">
+                            <div id="imagePreview"></div>
+                        </div>
+                        <div>
+                            <button class="primary-btn2 mt-20 text-uppercase " id="btn-predict">Analyze<span class="lnr lnr-arrow-right"></span></button>
+                        </div>
+                    </div>
                 </div>
+
+                <div class="loader" style="display:none;"></div>
+
+                <h3 id="result">
+                    <span> </span>
+                </h3>
                 <div class="col-lg-6 d-flex align-self-end img-right">
                     <img class="img-fluid" src="../static/img/header-img.png" alt="">
                 </div>
@@ -74,39 +95,6 @@
         </div>
     </section>
     <!-- End banner Area -->
-
-    <!-- start of upload section -->
-    {% extends "base.html" %} {% block content %}
-
-    <!-- <h2>Does your skin growth necessitate a dermatologist visit?</h2>
-    <h4>Click to find out!</h4>
-
-    <div> -->
-    <!-- connected to /predict route that  -->
-    <form id="upload-file" method="post" enctype="multipart/form-data">
-        <label for="imageUpload" class="upload-label">
-          <!-- Choose... -->
-        </label>
-        <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg" />
-    </form>
-
-    <div class="image-section" style="display:none;">
-        <div class="img-preview">
-            <div id="imagePreview"></div>
-        </div>
-        <div>
-            <button class="primary-btn2 mt-20 text-uppercase " id="btn-predict">Get Started<span class="lnr lnr-arrow-right"></span></button>
-        </div>
-    </div>
-
-    <div class="loader" style="display:none;"></div>
-
-    <h3 id="result">
-        <span> </span>
-    </h3>
-    </div>
-
-    {% endblock %}
 
     <!-- Start feature Area -->
     <section class="feature-area section-gap" id="service">
@@ -409,6 +397,7 @@
     <script src="../static/js/waypoints.min.js"></script>
     <script src="../static/js/jquery.counterup.min.js"></script>
     <script src="../static/js/main.js"></script>
+    <script src="../static/js/app.js"></script>
 </body>
 
 </html>
