--- a/Final_Project/templates/index.html
+++ b/Final_Project/templates/index.html
@@ -43,7 +43,7 @@
                         <nav class="hide">
                             <a href="#home">Home</a>
                             <a href="#service">About</a>
-                            <a href="#appoinment">Appoinment</a>
+                            <a href="#appoinment">Appointment</a>
                             <a href="#consultant">Our Team</a>
                         </nav>
                         <div class="menu-bar"><span class="lnr lnr-menu"></span></div>
@@ -67,7 +67,9 @@
                     </p>
                     <!-- Click to upload image -->
                     <form id="upload-file" method="post" enctype="multipart/form-data">
-                        <label for="imageUpload" class="upload-label">Upload Image</label>
+                        <label for="imageUpload" class="upload-label">
+                              Upload Image
+                            </label>
                         <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg" />
                     </form>
 
@@ -80,6 +82,8 @@
                         <div>
                             <button class="primary-btn2 mt-20 text-uppercase " id="btn-predict">Analyze<span class="lnr lnr-arrow-right"></span></button>
                         </div>
+
+                        </button>
                     </div>
                 </div>
 
@@ -220,7 +224,7 @@
                 <div class="col-md-8 pb-80 header-text">
                     <h1>Our Team</h1>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut <br> labore et dolore magna aliqua.
+                        Super bright, motivated and high performing group <br> looking to utilize newly acquired technical skills.
                     </p>
                 </div>
             </div>
@@ -314,54 +318,6 @@
     <!-- start footer Area -->
     <footer class="footer-area section-gap">
         <div class="container">
-            <!-- <div class="row">
-                <div class="col-lg-2  col-md-6">
-                    <div class="single-footer-widget">
-                        <h6>Top Products</h6>
-                        <ul class="footer-nav">
-                            <li><a href="#">Managed Website</a></li>
-                            <li><a href="#">Manage Reputation</a></li>
-                            <li><a href="#">Power Tools</a></li>
-                            <li><a href="#">Marketing Service</a></li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="col-lg-4  col-md-6">
-                    <div class="single-footer-widget mail-chimp">
-                        <h6 class="mb-20">Contact Us</h6>
-                        <p>
-                            56/8, bir uttam qazi nuruzzaman road, west panthapath, kalabagan, Dhanmondi, Dhaka - 1205
-                        </p>
-                        <h3>012-6532-568-9746</h3>
-                        <h3>012-6532-568-97468</h3>
-                    </div>
-                </div>
-                <div class="col-lg-6  col-md-12">
-                    <div class="single-footer-widget newsletter">
-                        <h6>Newsletter</h6>
-                        <p>You can trust us. we only send promo offers, not a single spam.</p>
-                        <div id="mc_embed_signup">
-                            <form target="_blank" novalidate="true" action="https://spondonit.us12.list-manage.com/subscribe/post?u=1462626880ade1ac87bd9c93a&amp;id=92a4423d01" method="get" class="form-inline">
-
-                                <div class="form-group row" style="width: 100%">
-                                    <div class="col-lg-8 col-md-12">
-                                        <input name="EMAIL" placeholder="Enter Email" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter Email '" required="" type="email">
-                                        <div style="position: absolute; left: -5000px;">
-                                            <input name="b_36c4fd991d266f23781ded980_aefe40901a" tabindex="-1" value="" type="text">
-                                        </div>
-                                    </div>
-
-                                    <div class="col-lg-4 col-md-12">
-                                        <button class="nw-btn primary-btn">Subscribe<span class="lnr lnr-arrow-right"></span></button>
-                                    </div>
-                                </div>
-                                <div class="info"></div>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-            </div> -->
-
             <div class="row footer-bottom d-flex justify-content-between">
                 <p class="col-lg-8 col-sm-12 footer-text m-0">
                     <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
@@ -381,8 +337,6 @@
         </div>
     </footer>
     <!-- End footer Area -->
-
-
 
     <!-- start of scripts -->
     <script src="../static/js/vendor/jquery-2.2.4.min.js"></script>
