--- a/Final_Project/templates/index.html
+++ b/Final_Project/templates/index.html
@@ -17,17 +17,20 @@
     <!-- Site Title -->
     <title>Medical</title>
 
+
+    
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
     <!--
-			CSS
-			============================================= -->
-    <link rel="stylesheet" href="../static/css/linearicons.css">
-    <link rel="stylesheet" href="../static/css/font-awesome.min.css">
-    <link rel="stylesheet" href="../static/css/magnific-popup.css">
-    <link rel="stylesheet" href="..static/css/nice-select.css">
+        CSS
+        ============================================= -->
+
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/linearicons.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/font-awesome.min.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/magnific-popup.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/nice-select.css') }}">
     <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
-    <link rel="stylesheet" href="../static/css/bootstrap.css">
-    <link rel="stylesheet" href="../static/css/main.css">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 
 <body>
@@ -37,7 +40,7 @@
             <div class="header-wrap">
                 <div class="header-top d-flex justify-content-between align-items-center">
                     <div class="logo">
-                        <a href="#home"><img src="../static/img/logo.png" alt=""></a>
+                        <a href="#home"><img src="{{ url_for('static', filename='img/logo.png') }}" alt=""></a>
                     </div>
                     <div class="main-menubar d-flex align-items-center">
                         <nav class="hide">
@@ -103,7 +106,7 @@
 
                     
                 <div class="col-lg-6 d-flex align-self-end img-right">
-                    <img class="img-fluid" src="../static/img/header-img.png" alt="">
+                    <img class="img-fluid" src="{{ url_for('static', filename='img/header-img.png') }}" alt="">
                 </div>
             </div>
         </div>
@@ -197,7 +200,7 @@
         <div class="container-fluid">
             <div class="row d-flex justify-content-end align-items-center">
                 <div class="col-lg-6 col-md-12 about-left no-padding">
-                    <img class="img-fluid" src="../static/img/about-img.jpg" alt="">
+                    <img class="img-fluid" src="{{ url_for('static', filename='img/about-img.jpg') }}" alt="">
                 </div>
                 <div class="col-lg-6 col-md-12 about-right no-padding">
                     <h1>Book an <br> Appoinment</h1>
@@ -246,7 +249,7 @@
                         <div class="content">
                             <a href="#" target="_blank">
                                 <div class="content-overlay"></div>
-                                <img class="content-image img-fluid d-block mx-auto" src="../static/img/c1.jpg" alt="">
+                                <img class="content-image img-fluid d-block mx-auto" src="{{ url_for('static', filename='img/c1.jpg') }}" alt="">
                                 <div class="content-details fadeIn-bottom">
                                     <h4>James Curtis</h4>
                                     <p>
@@ -262,7 +265,7 @@
                         <div class="content">
                             <a href="#" target="_blank">
                                 <div class="content-overlay"></div>
-                                <img class="content-image img-fluid d-block mx-auto" src="../static/img/c3.jpg" alt="">
+                                <img class="content-image img-fluid d-block mx-auto" src="{{ url_for('static', filename='img/c3.jpg') }}" alt="">
                                 <div class="content-details fadeIn-bottom">
                                     <h4>Austen Manser</h4>
                                     <p>
@@ -278,7 +281,7 @@
                         <div class="content">
                             <a href="#" target="_blank">
                                 <div class="content-overlay"></div>
-                                <img class="content-image img-fluid d-block mx-auto" src="../static/img/c1.jpg" alt="">
+                                <img class="content-image img-fluid d-block mx-auto" src="{{ url_for('static', filename='img/c1.jpg') }}" alt="">
                                 <div class="content-details fadeIn-bottom">
                                     <h4>Bill Nash</h4>
                                     <p>
@@ -294,7 +297,7 @@
                         <div class="content">
                             <a href="#" target="_blank">
                                 <div class="content-overlay"></div>
-                                <img class="content-image img-fluid d-block mx-auto" src="../static/img/c3.jpg" alt="">
+                                <img class="content-image img-fluid d-block mx-auto" src="{{ url_for('static', filename='img/c3.jpg') }}" alt="">
                                 <div class="content-details fadeIn-bottom">
                                     <h4>Emanshu Patel</h4>
                                     <p>
@@ -310,7 +313,7 @@
                         <div class="content">
                             <a href="#" target="_blank">
                                 <div class="content-overlay"></div>
-                                <img class="content-image img-fluid d-block mx-auto" src="../static/img/c2.jpg" alt="">
+                                <img class="content-image img-fluid d-block mx-auto" src="{{ url_for('static', filename='img/c2.jpg') }}" alt="">
                                 <div class="content-details fadeIn-bottom">
                                     <h4>Erica Unterreiner</h4>
                                     <p>
@@ -400,19 +403,19 @@
 
 
     <!-- start of scripts -->
-    <script src="../static/js/vendor/jquery-2.2.4.min.js"></script>
+    <script src="{{ url_for('static', filename='js/vendor/jquery-2.2.4.min.js') }}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-    <script src="../static/js/vendor/bootstrap.min.js"></script>
-    <script src="../static/js/jquery.ajaxchimp.min.js"></script>
-    <script src="../static/js/jquery.nice-select.min.js"></script>
-    <script src="../static/js/jquery.sticky.js"></script>
-    <script src="../static/js/parallax.min.js"></script>
+    <script src="{{ url_for('static', filename='js/vendor/bootstrap.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.ajaxchimp.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.nice-select.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.sticky.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/parallax.min.js') }}"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-    <script src="../static/js/jquery.magnific-popup.min.js"></script>
-    <script src="../static/js/waypoints.min.js"></script>
-    <script src="../static/js/jquery.counterup.min.js"></script>
-    <script src="../static/js/main.js"></script>
-    <script src="../static/js/app.js"></script>
+    <script src="{{ url_for('static', filename='js/jquery.magnific-popup.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/waypoints.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/jquery.counterup.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 
 </html>
