--- a/Final_Project/templates/index.html
+++ b/Final_Project/templates/index.html
@@ -123,7 +123,7 @@
                         <div class="desc">
                             <h4 class="text-uppercase">Referral Service</h4>
                             <p>
-                                If you do not have a doctor or dermatologist <br> search for one in your area here.
+                                If you do not have a doctor or dermatologist <br> search for one in your area <a href="https://www.mercy.net/search/doctor/?q=+&options=scheduleOnline&gclid=CjwKCAjw-OHkBRBkEiwAoOZql9hnvurSL97H3DCop1khTlIZYE6zX7MkxF8JxjNgMR2qjaC4LFAGQBoCxpIQAvD_BwE&solrsort=&distance=25&specialties=&servicesOffered=&gender=&languages=&page=1">here.</a>
                             </p>
                         </div>
                     </div>
@@ -134,7 +134,7 @@
                         <div class="desc">
                             <h4 class="text-uppercase">Current Model</h4>
                             <p>
-                                A behind the scenes look at the technology <br> that drives our service.
+                                A behind the scenes look at the <a href="https://github.com/elu267/Final_Project">technology</a> <br> that drives our service.
                             </p>
                         </div>
                     </div>
@@ -147,29 +147,29 @@
                         <div class="desc">
                             <h4 class="text-uppercase">Why Use Skin Scan?</h4>
                             <p>
-                                To see how skin scan is helping to detect issues early <br> click here to learn more.
+                                Skin cancer is the most common type of cancer, <br> but it's also one of the easiest kinds to treate if you catch it early.
                             </p>
                         </div>
                     </div>
                     <div class="single-feature d-flex flex-row pb-30">
                         <div class="icon">
-                            <span class="lnr lnr-paw"></span>
+                            <span class="lnr lnr-question-circle"></span>
                         </div>
                         <div class="desc">
-                            <h4 class="text-uppercase">Lorem Ipsum</h4>
+                            <h4 class="text-uppercase">What to Expect at the Doctor</h4>
                             <p>
-                                lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum <br> lorem ipsum, lorem ipsum, lorem ipsum, lorem ipsum.
+                                Your doctor will check for the ABCDEs of each mole: <br> asymmetry, border irregularity, color, diameter, evolving.
                             </p>
                         </div>
                     </div>
                     <div class="single-feature d-flex flex-row">
                         <div class="icon">
-                            <span class="lnr lnr-laptop"></span>
+                            <span class="lnr lnr-volume-high"></span>
                         </div>
                         <div class="desc">
-                            <h4 class="text-uppercase">Additional Research</h4>
+                            <h4 class="text-uppercase">Disclaimer!</h4>
                             <p>
-                                Find the latest articles and skin heath discoveries <br> by visiting our library of research papers and articles.
+                                This application is provided as technical demonstration, <br> not as medical diagnosis.
                             </p>
                         </div>
                     </div>
