--- a/Final_Project/templates/index.html
+++ b/Final_Project/templates/index.html
@@ -18,7 +18,7 @@
     <title>Medical</title>
 
 
-    
+    <script src="https://d3js.org/d3.v3.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
     <!--
         CSS
@@ -65,9 +65,17 @@
                     <h1 class="text-uppercase">
                         Skin cancer <br> self exam
                     </h1>
+
+                    <!-- blank div to append diagnosis after analyze button is clicked.  -->
+                    <div id="one">
+                    </div>
+                    <!-- this div will be removed on click of analyze button -->
+                    <div id="two">
                     <p>
-                        Skin cancer is the most common typ eof cancer, but it's also one of the easiest kinds to treate if you catch it early.
+                        Skin cancer is the most common type of cancer, but it's also one of the easiest kinds to treate if you catch it early.
                     </p>
+                    </div>
+                
                     <!-- Click to upload image -->
                     <form id="upload-file" method="post" enctype="multipart/form-data">
                         <label for="imageUpload" class="upload-label">
@@ -97,9 +105,7 @@
                         
                           <div class="loader" style="display:none;"></div>
                         
-                          <h3 id="result">
-                            <span> </span>
-                          </h3>
+                          <div id="test"></div>
 
 
 
