--- a/Final_Project/templates/index.html
+++ b/Final_Project/templates/index.html
@@ -62,14 +62,24 @@
                     <h1 class="text-uppercase">
                         Skin Scan <br> self exam
                     </h1>
-                    <p>
-                        Skin cancer is the most common type of cancer, but it's also one of the easiest kinds to treate if you catch it early.
-                    </p>
+                    <!-- blank div to append diagnosis after analyze button is clicked.  -->
+                    <div id="one">
+                    </div>
+                    <!-- this div will be removed on click of analyze button -->
+                    <div id="two">
+                        <p>
+                            Skin cancer is the most common type of cancer, but it's also one of the easiest kinds to treate if you catch it early.
+                        </p>
+
+
+
+                    </div>
+
                     <!-- Click to upload image -->
                     <form id="upload-file" method="post" enctype="multipart/form-data">
                         <label for="imageUpload" class="upload-label">
-                              Upload Image
-                            </label>
+            Upload Image
+          </label>
                         <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg" />
                     </form>
 
@@ -89,9 +99,9 @@
 
                 <div class="loader" style="display:none;"></div>
 
-                <h3 id="result">
-                    <span> </span>
-                </h3>
+                <div id="test"></div>
+
+
                 <div class="col-lg-6 d-flex align-self-end img-right">
                     <img class="img-fluid" src="../static/img/header-img.png" alt="">
                 </div>
