--- a/Final_Project/templates/index.html
+++ b/Final_Project/templates/index.html
@@ -69,49 +69,44 @@
                     </div>
                     <!-- this div will be removed on click of analyze button -->
                     <div id="two">
-                    <p>
-                        Skin cancer is the most common type of cancer, but it's also one of the easiest kinds to treate if you catch it early.
-                    </p>
+                        <p>
+                            Skin cancer is the most common type of cancer, but it's also one of the easiest kinds to treate if you catch it early.
+                        </p>
                     </div>
-                
+
                     <!-- Click to upload image -->
                     <form id="upload-file" method="post" enctype="multipart/form-data">
                         <label for="imageUpload" class="upload-label">
                                 Upload Image
                                 </label>
-                        <input
-                        type="file"
-                        name="file"
-                        id="imageUpload"
-                        accept=".png, .jpg, .jpeg"
-                        />
+                        <input type="file" name="file" id="imageUpload" accept=".png, .jpg, .jpeg" />
                     </form>
 
                     <!-- button to analyze image -->
 
                     <div class="image-section" style="display:none;">
-                            <div class="img-preview">
-                                <div id="imagePreview"></div>
-                            </div>
-                            <div>
+                        <div class="img-preview">
+                            <div id="imagePreview"></div>
+                        </div>
+                        <div>
                             <button class="primary-btn2 mt-20 text-uppercase " id="btn-predict">Analyze<span class="lnr lnr-arrow-right"></span></button>
-                            </div>
-                                
-                                </button>
-                            </div>
-                            </div>
-                        
-                            <div class="loader" style="display:none;"></div>
-                        
-                            <div id="test"></div>
+                        </div>
 
-                
+                        </button>
+                    </div>
+                </div>
 
-                 
+                <div class="loader" style="display:none;"></div>
+
+                <div id="test"></div>
+
+
+
+
 
 
                 <div class="col-lg-6 d-flex align-self-end img-right">
-                        <img class="img-fluid" src="{{ url_for('static', filename='img/header-img.png') }}" alt="">
+                    <img class="img-fluid" src="{{ url_for('static', filename='img/header-img.png') }}" alt="">
                 </div>
             </div>
         </div>
@@ -203,7 +198,7 @@
         <div class="container-fluid">
             <div class="row d-flex justify-content-end align-items-center">
                 <div class="col-lg-6 col-md-12 about-left no-padding">
-                        <img class="img-fluid" src="{{ url_for('static', filename='img/about-img.jpg') }}" alt="">
+                    <img class="img-fluid" src="{{ url_for('static', filename='img/about-img.jpg') }}" alt="">
                 </div>
                 <div class="col-lg-6 col-md-12 about-right no-padding">
                     <h1>Book an <br> Appoinment</h1>
@@ -368,7 +363,6 @@
     <script src="{{ url_for('static', filename='js/jquery.magnific-popup.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/waypoints.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery.counterup.min.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
     <script src="{{ url_for('static', filename='js/app.js') }}"></script>
 </body>
 
