--- a/Final_Project/templates/index.html
+++ b/Final_Project/templates/index.html
@@ -61,7 +61,7 @@
             <div class="row fullscreen align-items-center justify-content-center">
                 <div class="banner-content col-lg-6 col-md-12">
                     <h1 class="text-uppercase">
-                        Skin Scan <br> self exam
+                        Skin Scan <br> self-exam
                     </h1>
 
                     <!-- blank div to append diagnosis after analyze button is clicked.  -->
@@ -70,7 +70,14 @@
                     <!-- this div will be removed on click of analyze button -->
                     <div id="two">
                         <p>
-                            Skin cancer is the most common type of cancer, but it's also one of the easiest kinds to treate if you catch it early.
+                            Skin cancer is the most common type of cancer, but it's also one of the easiest to treat if caught early. 
+                        </p>
+                        <p>
+                            Upload an image of a mole or lesion using the button below to receive a diagnosis from our computer model trained on more than 10,000 clinical images. 
+                        </p>
+                        <p>
+                            If the diagnosis mentions malignancies, we recommend making an appointment with a doctor below for a more thorough exam. 
+                            This model is not sufficient to diagnose you, but is designed to increase the chance you'll seek care if needed! 
                         </p>
                     </div>
 
