--- a/Final_Project/static/css/main.css
+++ b/Final_Project/static/css/main.css
@@ -22,6 +22,8 @@ label {
   opacity: 0;
   position: absolute;
   z-index: -1;
+  color: whitesmoke;
+  font-size: 5.5em;
 }
 
 
@@ -2153,15 +2155,16 @@ nav a:hover {
 
 .banner-area {
   background-color: #f9f9ff;
+  height: 750px !important;
 }
 
 .banner-area .fullscreen {
-  height: 850px !important;
+  height: 750px !important;
 }
 
 @media (max-width: 768px) {
   .banner-area .fullscreen {
-    height: 800px !important;
+    height: 750px !important;
   }
 }
 
