--- a/Final_Project/templates/index.html
+++ b/Final_Project/templates/index.html
@@ -70,14 +70,13 @@
                     <!-- this div will be removed on click of analyze button -->
                     <div id="two">
                         <p>
-                            Skin cancer is the most common type of cancer, but it's also one of the easiest to treat if caught early. 
+                            Skin cancer is the most common cancer, but it's easy to treat if caught early.
                         </p>
                         <p>
-                            Upload an image of a mole or lesion using the button below to receive a diagnosis from our computer model trained on more than 10,000 clinical images. 
+                            Upload an image of a mole or lesion using the button below for an estimate from our computer model.
                         </p>
                         <p>
-                            If the diagnosis mentions malignancies, we recommend making an appointment with a doctor below for a more thorough exam. 
-                            This model is not sufficient to diagnose you, but is designed to increase the chance you'll seek care if needed! 
+                            If the estimate mentions malignancies, we recommend making a Dr. appointment for a more thorough exam (see below)---
                         </p>
                     </div>
 
