--- a/Final_Project/templates/index.html
+++ b/Final_Project/templates/index.html
@@ -61,7 +61,7 @@
             <div class="row fullscreen align-items-center justify-content-center">
                 <div class="banner-content col-lg-6 col-md-12">
                     <h1 class="text-uppercase">
-                        Skin Scan <br> self exam
+                        Skin Scan <br> self-exam
                     </h1>
 
                     <!-- blank div to append diagnosis after analyze button is clicked.  -->
@@ -69,9 +69,9 @@
                     </div>
                     <!-- this div will be removed on click of analyze button -->
                     <div id="two">
-                        <p>
-                            Skin cancer is the most common type of cancer, but it's also one of the easiest kinds to treate if you catch it early.
-                        </p>
+                        <p>Skin cancer is the most common type of cancer, but it's also one of the easiest kinds to treate if you catch it early.</p>
+                        <p>Upload an image of a mole or skin lesion using the button below to receive results from our machine learning model. </p>
+                        <p>If your image results return with malignant categories, we strongly recommend making a doctor appointment for a more thorough exam.</p>
                     </div>
 
                     <!-- Click to upload image -->
