correcting spelling errors

--- a/Final_Project/templates/index.html
+++ b/Final_Project/templates/index.html
@@ -69,7 +69,7 @@
                     </div>
                     <!-- this div will be removed on click of analyze button -->
                     <div id="two">
-                        <p>Skin cancer is the most common type of cancer, but it's also one of the easiest kinds to treate if you catch it early.</p>
+                        <p>Skin cancer is the most common type of cancer, but it's also one of the easiest kinds to treat if you catch it early.</p>
                         <p>Upload an image of a mole or skin lesion using the button below to receive results from our machine learning model. </p>
                         <p>If your image results return with malignant categories, we strongly recommend making a doctor appointment for a more thorough exam.</p>
                     </div>
@@ -160,7 +160,7 @@
                         <div class="desc">
                             <h4 class="text-uppercase">Why Use Skin Scan?</h4>
                             <p>
-                                Skin cancer is the most common type of cancer, <br> but it's also one of the easiest kinds to treate if you catch it early.
+                                Skin cancer is the most common type of cancer, <br> but it's also one of the easiest kinds to treat if you catch it early.
                             </p>
                         </div>
                     </div>
@@ -201,7 +201,7 @@
                     <img class="img-fluid" src="{{ url_for('static', filename='img/about-img.jpg') }}" alt="">
                 </div>
                 <div class="col-lg-6 col-md-12 about-right no-padding">
-                    <h1>Book an <br> Appoinment</h1>
+                    <h1>Book an <br> Appointment</h1>
                     <form class="booking-form" id="myForm" action="donate.php">
                         <div class="row">
                             <div class="col-lg-12 d-flex flex-column">
